# cavernborn

./: Cargo.toml  README.md
assets/shaders/: chunk_material.wgsl
crates/cavernborn/: Cargo.toml
crates/cavernborn/src/: main.rs
crates/game/: Cargo.toml  README.md
crates/game/src/: main.rs
crates/world/: Cargo.toml  README.md
src/: camera.rs  chunk.rs  debug.rs  lib.rs  main.rs  map.rs  map_renderer.rs  particle.rs  player.rs  world.rs
src/particle/: fluid.rs  gem.rs  interaction.rs  liquid.rs  mod.rs  ore.rs  solid.rs
src/render/: chunk_material.rs  map_renderer.rs  mod.rs
src/simulation/: fluid.rs  mod.rs
src/testing/: harness.rs
src/utils/: coords.rs  debug.rs  mod.rs
src/world/: camera.rs  chunk.rs  generator.rs  map.rs  mod.rs
tests/: lib.rs  simulation_tests.rs  world_tests.rs
tools/: count_lines.ps1  setup.sh
