[package]
name = "cavernborn"
version = "0.1.0"
edition = "2021"
authors = ["Roshan Patel <ovicior@gmail.com>"]
rust-version = "1.85.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[dependencies]
bevy = { version = "0.15.3", features = [
    "dynamic_linking", # REMOVE IN RELEASE
    "trace",
] } # Basic game engine stuff (windows, inputs, etc.)
rand = "0.9.0"
strum = "0.27"
strum_macros = "0.27"
bitflags = "2.9.0"

# I manually set this version because it won't work with Bevy otherwise.
uuid = "1.12.1"
num_cpus = "1.16.0"
bevy-inspector-egui = "0.29.1"
rayon = "1.10.0"
dashmap = "6.1.0"
